--- a/index.html
+++ b/index.html
@@ -7,5 +7,13 @@
 </head>
 <body>
     <h1>Hello</h1>
+    <form action="">
+        <div>
+        <label for="name">Name</label>
+        <input type="text">
+    </div>
+    <input type="submit" value="Submit">
+
+    </form>
 </body>
 </html>
