--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="app.css">
 </head>
 <body>
     <h1>Hello</h1>
@@ -15,5 +16,7 @@
     <input type="submit" value="Submit">
 
     </form>
+    <div></div>
+    <script></script>
 </body>
 </html>
